--- a/deep_model/visulization.ipynb
+++ b/deep_model/visulization.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
     "\n",
     "print(np.array(features).shape)\n",
     "# save as npz\n",
-    "np.savez('feature_maps_1_2_music.npz', features=features)\n",
+    "np.save('feature_maps_1_2_music.npy', features)\n",
     "\n"
    ]
   },
